# data_science_utils

./: .dir-locals.el  .envrc  .gitignore  .guix-channel  .pylspconfig.json  Makefile  README.org  channels.scm  custom_types.py  experiment.csv  gmm_cov_6645.csv  gmm_info.csv  gmm_means.csv  hpc_results.csv  larger_experiment.csv  manifest.scm  my_manifest.scm  pyproject.toml  requirements.txt  setup.cfg  setup.py  small_output.csv  test_plot_dynamical_system.py  test_random_sampling.py  writeup_code.tar
.guix/modules/: guile-package.scm
.ipython/: migrated
.ipython/profile_default/: history.sqlite
.mypy_cache/3.10/: __future__.data.json  __future__.meta.json  __main__.data.json  __main__.meta.json  _ast.data.json  _ast.meta.json  (+238 more)
cloud_interface/: generate_aou_query.py  kaggle_datasets.py
data_science_utils/: df_utils.py
datasets/: compas.py
experiments/: mlflow_test.py  plot_ikeda.py  plot_lorenz63.py  plot_lorenz63_plotly.py  plot_lorenz_sphere.py
fair_active_learning/: fair_active_learning.org
image_manipulation/: matplotlib_image.py
model_evaluation/: classifiers.py  multi_target_filters.py
old_tests/: filtering.py  invertible_linear.py  jax_jit.py  jaxtyping_patterns.py
pipelines/: fair_active_pipeline.py
plotting/: plot_update.py
tests/: conftest.py  ikeda_speed_test.py  ikeda_test.py  jaxtyping.py  jaxtyping_patterns.py  lax_filtering.py  measurement.py  normalizing_flow.py  old_stuff.py  test.py  test_engmf.py
unit/: test_solve_optimal_transport.py
your_project_name.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+2838 files in other folders)
