[project]
name = "data_science_utils"
version = "0.1.0"
description = ""
authors = [{name = "Your Name", email = "your.email@example.com"}]
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pylsp-mypy]
enabled = false
live_mode = false
strict = false

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"